--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
   "name": "course-orbit-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "scrape.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node scrape.js",  
+    "start": "node scrape.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
+    "cloudscraper": "^4.6.0",
+    "express": "^4.21.1",
     "node-telegram-bot-api": "^0.66.0",
+    "puppeteer": "^23.6.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "puppeteer-real-browser": "^1.3.17",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.26.0"
+  },
+  "devDependencies": {
+    "node-dev": "^8.0.0"
   }
 }
