--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "scrape.js",
   "scripts": {
-    "dev": "node scrape.js",  
+    "dev": "node scrape.js",
     "start": "node scrape.js"
   },
   "keywords": [],
@@ -12,16 +12,9 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
-    "cheerio": "^1.0.0",
-    "cloudscraper": "^4.6.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "node-telegram-bot-api": "^0.66.0",
-    "puppeteer": "^23.6.1",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "puppeteer-real-browser": "^1.3.17",
-    "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.26.0"
+    "puppeteer": "^23.6.1"
   },
   "devDependencies": {
     "node-dev": "^8.0.0"
